--- a/styles/markdown-styles.module.css
+++ b/styles/markdown-styles.module.css
@@ -1,18 +1,6 @@
-.markdown {
-  @apply text-lg leading-relaxed;
-}
-
-.markdown p,
-.markdown ul,
-.markdown ol,
-.markdown blockquote {
-  @apply my-6;
-}
-
-.markdown h2 {
-  @apply text-3xl mt-12 mb-4 leading-snug;
-}
-
-.markdown h3 {
-  @apply text-2xl mt-8 mb-4 leading-snug;
+.postbody ul,
+.postbody ol {
+  @apply text-5xl
+  font-bold
+  ml-2.5 mr-0;
 }
