--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400&display=swap');
 
 @layer base {
   body {
@@ -13,8 +14,8 @@
   }
 }
 
-@layer utilities{
-  .square{
+@layer utilities {
+  .square {
     aspect-ratio: 2/1;
   }
 }
